--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Webpack Starter Kit</title>
+    <title>FAMILY FEUD</title>
+    <link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
+    <h1 class="test">THIS IS THE H1</h1>;
 
     <img src="/images/turing-logo.png" alt="turing logo" height="100px" width="100px">
 
