--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
   </head>
   <body>
     <main class="main">
-      <section class="main-splash__hide">
+      <section class="main-splash__hide splash">
         <img class="main-image__hide">
       </section>
-      <section class="main-splash__hide main-inputs">
+      <section class="main-splash__hide main-inputs splash">
         <input class="main-input__hide main-input__player-one" type="text">
         <input class="main-input__hide main-input__player-two" type="text">
         <button class="main-button__hide main-button__submit-name">SUBMIT NAMES</button>
       </section>
-      <section class="main-container__scoreboard">
+      <section class="main-container__scoreboard board">
         <img class="main-image__scoreboard">
         <div class="main-div__timer">
           <span class="main-span__timer">:00</span>
@@ -49,16 +49,16 @@
           <span class="main-span__current-player">CURRENT PLAYER: </span> QUESTION GOES HERE:
         </p>
       </section>
-      <section class="main-section__player-images">
+      <section class="main-section__player-images board">
         <img class="main-image__player-one">
         <span class="main-span__player-one-name">PLAYER 1</span>
         <img class="main-image__player-two">
         <span class="main-span__player-two-name">PLAYER 2</span>
       </section>
-      <section class="main-section__guess-input">
+      <section class="main-section__guess-input board">
         <input class="main-input__guess-input" type="text">
       </section>
-      <section class="main-section__game-buttons">
+      <section class="main-section__game-buttons board">
           <button class="main-button__start-game">START GAME</button>
           <button class="main-button__reset-game">RESET GAME</button>
           <button class="main-button__submit-guess">SUBMIT GUESS</button>
