Add dom updates for correct player guesses

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
           <span class="main-span__player-two-score">0</span>
         </div>
         <p class="main-p__question-prompt">
-          <span class="main-span__current-player">CURRENT PLAYER: </span> QUESTION GOES HERE:
+          <span class="main-span__current-player">WELCOME TO FAMILY FEUD </span><span class="main-span__current-question"></span>
         </p>
       </section>
       <section class="main-section__player-images board">
