Add initial splash and gameboard images, some basic styling

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,13 @@
   <body>
     <main class="main">
       <section class="main-splash__hide splash">
-        <img class="main-image__hide">
-      </section>
-      <section class="main-splash__hide main-inputs splash">
-        <input class="main-input__hide main-input__player-one" type="text">
-        <input class="main-input__hide main-input__player-two" type="text">
+        <img class="main-image__hide splash-image__size" src='./images/family-feud_splash.gif'>
+        <section class="main-splash__hide main-inputs splash">
+        </section>
+        <label for="main-input__player-one">Player One Name:</label>
+        <input class="main-input__hide main-input__player-one" id="main-input__player-one" type="text">
+        <label for="main-input__player-two">Player Two Name:</label>
+        <input class="main-input__hide main-input__player-two" id="main-input__player-one" type="text">
         <button class="main-button__hide main-button__submit-name">SUBMIT NAMES</button>
       </section>
       <section class="main-container__scoreboard board">
