--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
       </section>
       <section class="main-container__scoreboard board">
         <img class="main-image__scoreboard">
-        <div class="main-div__timer">
-          <span class="main-span__timer">:00</span>
-        </div>
         <div class="main-div__player-one-score">
           <span class="main-span__player-one-score">0</span>
+        </div>
+        <div class="main-div__timer">
+          <span class="main-span__timer">:00</span>
         </div>
         <table class="main-table__responses">
           <tbody>
@@ -47,23 +47,25 @@
         <div class="main-div__player-two-score">
           <span class="main-span__player-two-score">0</span>
         </div>
-        <p class="main-p__question-prompt">
-          <span class="main-span__current-player">WELCOME TO FAMILY FEUD </span><span class="main-span__current-question"></span>
-        </p>
-      </section>
-      <section class="main-section__player-images board">
-        <img class="main-image__player-one">
-        <span class="main-span__player-one-name">PLAYER 1</span>
-        <img class="main-image__player-two">
-        <span class="main-span__player-two-name">PLAYER 2</span>
-      </section>
-      <section class="main-section__guess-input board">
-        <input class="main-input__guess-input" type="text">
-      </section>
-      <section class="main-section__game-buttons board">
-          <button class="main-button__start-game">START GAME</button>
-          <button class="main-button__reset-game">RESET GAME</button>
-          <button class="main-button__submit-guess">SUBMIT GUESS</button>
+        <div class="main-div__questions">
+          <p class="main-p__question-prompt">
+            <span class="main-span__current-player">WELCOME TO FAMILY FEUD </span><span class="main-span__current-question"></span>
+          </p>
+        </div>
+        <section class="main-section__player-images board">
+          <img class="main-image__player-one">
+          <span class="main-span__player-one-name">PLAYER 1</span>
+          <img class="main-image__player-two">
+          <span class="main-span__player-two-name">PLAYER 2</span>
+        </section>
+        <section class="main-section__guess-input board">
+          <input class="main-input__guess-input" type="text">
+        </section>
+        <section class="main-section__game-buttons board">
+            <button class="main-button__start-game">START GAME</button>
+            <button class="main-button__reset-game">RESET GAME</button>
+            <button class="main-button__submit-guess">SUBMIT GUESS</button>
+        </section>
       </section>
     </main>
   </body>
