Update Grid dimensions and scootch score and timers into place

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
       <section class="main-container__scoreboard board">
         <img class="main-image__scoreboard">
         <div class="main-div__player-one-score">
-          <span class="main-span__player-one-score">0</span>
+          <h2 class="main-h2__player-one-score">0</h2>
         </div>
         <div class="main-div__timer">
-          <span class="main-span__timer">:00</span>
+          <h4 class="main-h4__timer">:00</h4>
         </div>
         <table class="main-table__responses">
           <tbody>
@@ -45,7 +45,7 @@
           </tbody>
         </table>
         <div class="main-div__player-two-score">
-          <span class="main-span__player-two-score">0</span>
+          <h2 class="main-h2__player-two-score">58</h2>
         </div>
         <div class="main-div__questions">
           <p class="main-p__question-prompt">
