Align input fields on splash screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,18 @@
     <main class="main">
       <section class="main-splash__hide splash">
         <img class="main-image__hide splash-image__size" src='./images/family-feud_splash.gif'>
-        <section class="main-splash__hide main-inputs splash">
-        </section>
-        <label for="main-input__player-one">Player One Name:</label>
-        <input class="main-input__hide main-input__player-one" id="main-input__player-one" type="text">
-        <label for="main-input__player-two">Player Two Name:</label>
-        <input class="main-input__hide main-input__player-two" id="main-input__player-one" type="text">
+      </section>
+      <section class="main-splash__hide main-inputs splash">
+        <div class="main-div__player-one-field">
+          <label class="main-label__player-one" for="main-input__player-one">Player One Name:</label>
+          <input class="main-input__hide main-input__player-one" id="main-input__player-one" type="text">
+          <br>
+        </div>
+        <div class="main-div__player-two-field">
+          <label class="main-label__player-two" for="main-input__player-two">Player Two Name:</label>
+          <input class="main-input__hide main-input__player-two" id="main-input__player-one" type="text">
+        <br>
+        </div>
         <button class="main-button__hide main-button__submit-name">SUBMIT NAMES</button>
       </section>
       <section class="main-container__scoreboard board">
@@ -45,7 +51,7 @@
           </tbody>
         </table>
         <div class="main-div__player-two-score">
-          <h2 class="main-h2__player-two-score">58</h2>
+          <h2 class="main-h2__player-two-score">0</h2>
         </div>
         <div class="main-div__questions">
           <p class="main-p__question-prompt">
