Build black table rows

--- a/src/index.html
+++ b/src/index.html
@@ -32,21 +32,17 @@
         </div>
         <table class="main-table__responses">
           <tbody>
-            <tr class="main-tr__top-response">
-              <td class="main-tr__top-answer"></td>
-              <td class="main-tr__top-respondents"></td>
+            <tr class="main-tr__top-response tr">
+              <td class="main-tr__top-answer td-answers"></td>
+              <td class="main-tr__top-respondents td-respondents"></td>
             </tr>
-            <tr class="main-tr__middle-response">
-              <td class="main-tr__middle-answer"></td>
-              <td class="main-tr__middle-respondents"></td>
+            <tr class="main-tr__middle-response tr">
+              <td class="main-tr__middle-answer td-answers"></td>
+              <td class="main-tr__middle-respondents td-respondents"></td>
             </tr>
-            <tr class="main-tr__bottom-response">
-                <td class="main-tr__bottom-answer"></td>
-                <td class="main-tr__bottom-respondents"></td>
-            </tr>
-            <tr class="main-tr__empty">
-            </tr>
-            <tr class="main-tr__empty">
+            <tr class="main-tr__bottom-response tr">
+                <td class="main-tr__bottom-answer td-answers"></td>
+                <td class="main-tr__bottom-respondents td-respondents"></td>
             </tr>
           </tbody>
         </table>
