--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <main class="main">
       <section class="main-splash__hide splash">
-        <img class="main-image__hide splash-image__size" src='./images/family-feud_splash.gif'>
+        <img class="main-image__hide splash-image__size" src='./images/family-feud_splash.png'>
       </section>
       <section class="main-splash__hide main-inputs splash">
         <div class="main-div__player-one-field">
