Add updated gameboard .png

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <button class="main-button__hide main-button__submit-name">SUBMIT NAMES</button>
       </section>
       <section class="main-container__scoreboard board">
-        <img class="main-image__scoreboard">
+        <img class="main-image__scoreboard" src='./images/family-feud_splash.png'>
         <div class="main-div__player-one-score">
           <h2 class="main-h2__player-one-score">0</h2>
         </div>
