Add button styling

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
           <span class="main-span__player-two-name">PLAYER 2</span>
         </section>
         <section class="main-section__guess-input board">
-          <input class="main-input__guess-input" type="text">
+          <input class="main-input__guess-input" type="text" placeholder="And the survey says...">
         </section>
         <section class="main-section__game-buttons board">
             <button class="main-button__start-game">START GAME</button>
