Adjust game buttons locations

--- a/src/index.html
+++ b/src/index.html
@@ -72,10 +72,12 @@
           <input class="main-input__guess-input" type="text" placeholder="And the survey says...">
         </section>
         <section class="main-section__game-buttons board">
+          <button class="main-button__submit-guess">SUBMIT GUESS</button>
+        </section>
+          <section class="main-section__left-buttons">
             <button class="main-button__start-game">START GAME</button>
             <button class="main-button__reset-game">RESET GAME</button>
-            <button class="main-button__submit-guess">SUBMIT GUESS</button>
-        </section>
+          </section>
       </section>
     </main>
   </body>
