Start working on audio and add names to podiums and scoreboard

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
         <img class="main-image__scoreboard" src='./images/family-feud_board.png'>
         <div class="main-div__player-one-score">
           <h2 class="main-h2__player-one-score">0</h2>
+          <h3 class="main-h3__player-one-name">Player 1</h3>
         </div>
         <div class="main-div__timer">
           <h4 class="main-h4__timer">:00</h4>
@@ -48,6 +49,7 @@
         </table>
         <div class="main-div__player-two-score">
           <h2 class="main-h2__player-two-score">0</h2>
+          <h3 class="main-h3__player-two-name">Player Two</h3>
         </div>
         <div class="main-div__questions">
           <p class="main-p__question-prompt">
@@ -58,14 +60,14 @@
           <div>
             <img class="main-image__player-one_face player one face" src='./images/player-one_face.png'>
             <img class="main-image__player-one_face player one turned" src='./images/player-one_turned.png'>
-            <img class="main-image__player-one_podium player one podium" src='./images/player-one_podium.png'>
             <span class="main-span__player-one-name player one">PLAYER 1</span>
+            <img class="main-image__player-one_podium player one podium" src='./images/player-one_podium.png'>
           </div>
           <div>
             <img class="main-image__player-two_face player two face" src='./images/player-two_face.png'>
             <img class="main-image__player-one_face player two turned" src='./images/player-two_turned.png'>
-            <img class="main-image__player-two_podium player two podium" src='./images/player-two_podium.png'>
             <span class="main-span__player-two-name player two">PLAYER 2</span>
+            <img class="main-image__player-two_podium player two podium" src='./images/player-two_podium.png'>
           </div>
         </section>
         <section class="main-section__guess-input board">
