Center and style welcome text

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="main-div__questions">
           <p class="main-p__question-prompt">
-            <span class="main-span__current-player">WELCOME TO FAMILY FEUD </span><span class="main-span__current-question"></span>
+            <span class="main-span__current-player welcomeCenter">&nbsp; WELCOME TO FAMILY FEUD &nbsp;</span><span class="main-span__current-question"></span>
           </p>
         </div>
         <section class="main-section__player-images board">
