Added timer and some logic/DOM updates for Fast Money

--- a/src/index.html
+++ b/src/index.html
@@ -78,9 +78,11 @@
         </section>
         <section class="main-section__game-buttons board">
           <button class="main-button__submit-guess">SUBMIT GUESS</button>
+          <button class="main-button__submit-fast-guess">SUBMIT GUESS</button>
         </section>
           <section class="main-section__left-buttons">
             <button class="main-button__start-game">START GAME</button>
+            <button class="main-button__start-fast-turn">START FAST MONEY</button>
             <button class="main-button__reset-game">RESET GAME</button>
           </section>
       </section>
