--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,12 @@
         </section>
         <section class="main-section__guess-input board">
           <input class="main-input__guess-input" type="text" placeholder="And the survey says...">
+          <input class="main-input__multiplier-input" type="number" placeholder="Enter a multiplier: 1 - 5">
+          <input class="main-input__fast-guess-input" type="text" placeholder="TEST...">
         </section>
         <section class="main-section__game-buttons board">
           <button class="main-button__submit-guess">SUBMIT GUESS</button>
+          <button class="main-button__submit-multiplier">SUBMIT MULTIPLIER</button>
           <button class="main-button__submit-fast-guess">SUBMIT GUESS</button>
         </section>
           <section class="main-section__left-buttons">
