Add dom updates for winner

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,9 @@
             <button class="main-button__reset-game">RESET GAME</button>
           </section>
       </section>
+      <aside class="winner">
+        <p>Congratulations, <span class="winner-name">Name</span>, you won Family Feud with <span class="winner-points">Score</span> points!</p>
+      </aside>
     </main>
   </body>
 </html>
