Add some minor refactoring to round methods

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         <section class="main-section__guess-input board">
           <input class="main-input__guess-input" type="text" placeholder="And the survey says...">
           <input class="main-input__multiplier-input" type="number" placeholder="Enter a multiplier: 1 - 5">
-          <input class="main-input__fast-guess-input" type="text" placeholder="TEST...">
+          <input class="main-input__fast-guess-input" type="text" placeholder="Submit as many guesses as you can!">
         </section>
         <section class="main-section__game-buttons board">
           <button class="main-button__submit-guess">SUBMIT GUESS</button>
