Build between round splash screens skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,16 @@
             <button class="main-button__reset-game">RESET GAME</button>
           </section>
       </section>
+      <aside class="roundTwo">
+        <p>Round Two</p>
+      </aside>
+      <aside class="fastMoney">
+        <h2 class="fastMoney-header">Welcome to Fast Money!</h2>
+        <p class="fastMoney-p">First, you will enter a multiplier between one and five to multiply the points you earn during your Fast Money turn.
+          You will have 30 seconds to enter as many answers as you can, and when the time is up, the points you earn during your Fast Money turn 
+        will be added to your score from the previous two rounds.</p>
+        <button class="fastMoney-button">LET'S PLAY!</button>
+      </aside>
       <aside class="winner">
         <p>Congratulations, <span class="winner-name">Name</span>, you won Family Feud with <span class="winner-points">Score</span> points!</p>
       </aside>
