--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
         <button class="fastMoney-button">LET'S PLAY!</button>
       </aside>
       <aside class="winner roundSplash">
-        <p>Congratulations, <span class="winner-name">Name</span>, you won Family Feud with <span class="winner-points">Score</span> points!</p>
+        <h2>Congratulations, <span class="winner-name">Name</span>, you won Family Feud with <span class="winner-points">Score</span> points!</h2>
         <button class="winner-button">PLAY AGAIN!</button>
       </aside>
     </main>
